@@ -1,3 +1,9 @@
+Tue Dec  9 22:42:50 UTC 2008  Steven Stallion  <stallions@ociweb.com>
+
+        * java/jms/native/org_opendds_jms_DCPSInfoRepo.cpp:
+
+          Updated style to match DDS proper; fixed deprecated casts.
+
 Tue Dec  9 22:04:28 UTC 2008  Steven Stallion  <stallions@ociweb.com>
 
         * java/idl2jni/codegen/im_jni.cpp:
@@ -5,9 +11,9 @@ Tue Dec  9 22:04:28 UTC 2008  Steven Stallion  <stallions@ociweb.com>
         * java/idl2jni/runtime/idl2jni_runtime.h:
         * java/idl2jni/runtime/idl2jni_runtime.cpp:
 
-          Completed support for a global ClassLoader; this fixes an issue 
-          where ACE threads could not find classes defined in nested      
-          ClassLoaders.                                                   
+          Completed support for a global ClassLoader; this fixes an issue
+          where ACE threads could not find classes defined in nested
+          ClassLoaders.
 
 Tue Dec  9 16:54:53 UTC 2008  Weiqi Gao  <gaow@ociweb.com>
 
